# license-guard

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: _config.yml  architecture.md  ci-cd.md  cli-reference.md  docs-preview-and-pages.md  getting-started.md  index.md  policy-guide.md  pypi-drift.md  python-api.md  troubleshooting.md  web-dashboard.md
docs/_layouts/: default.html
docs/assets/css/: docs.css
docs/assets/js/: theme.js
src/licenseguard/: __init__.py  __main__.py  cli.py  license_detection.py  license_tokens.py  policy.py  pypi.py  resolver.py  scan.py  webapp.py
tests/: conftest.py  test_cli.py  test_licenseguard.py  test_webapp.py
